; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_evlist.c_perf_evlist__alloc_pollfd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_evlist.c_perf_evlist__alloc_pollfd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_evlist = type { i32, i32*, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.perf_evlist*)* @perf_evlist__alloc_pollfd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @perf_evlist__alloc_pollfd(%struct.perf_evlist* %0) #0 {
  %2 = alloca %struct.perf_evlist*, align 8
  %3 = alloca i32, align 4
  store %struct.perf_evlist* %0, %struct.perf_evlist** %2, align 8
  %4 = load %struct.perf_evlist*, %struct.perf_evlist** %2, align 8
  %5 = getelementptr inbounds %struct.perf_evlist, %struct.perf_evlist* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 8
  %7 = call i32 @cpu_map__nr(i32 %6)
  %8 = load %struct.perf_evlist*, %struct.perf_evlist** %2, align 8
  %9 = getelementptr inbounds %struct.perf_evlist, %struct.perf_evlist* %8, i32 0, i32 2
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = mul nsw i32 %7, %12
  %14 = load %struct.perf_evlist*, %struct.perf_evlist** %2, align 8
  %15 = getelementptr inbounds %struct.perf_evlist, %struct.perf_evlist* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = mul nsw i32 %13, %16
  store i32 %17, i32* %3, align 4
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = mul i64 4, %19
  %21 = trunc i64 %20 to i32
  %22 = call i32* @malloc(i32 %21)
  %23 = load %struct.perf_evlist*, %struct.perf_evlist** %2, align 8
  %24 = getelementptr inbounds %struct.perf_evlist, %struct.perf_evlist* %23, i32 0, i32 1
  store i32* %22, i32** %24, align 8
  %25 = load %struct.perf_evlist*, %struct.perf_evlist** %2, align 8
  %26 = getelementptr inbounds %struct.perf_evlist, %struct.perf_evlist* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %1
  br label %33

30:                                               ; preds = %1
  %31 = load i32, i32* @ENOMEM, align 4
  %32 = sub nsw i32 0, %31
  br label %33

33:                                               ; preds = %30, %29
  %34 = phi i32 [ 0, %29 ], [ %32, %30 ]
  ret i32 %34
}

declare dso_local i32 @cpu_map__nr(i32) #1

declare dso_local i32* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
